# spoonmap

./: .gitignore  CLAUDE.md  README.md  config.json.sample  pyproject.toml  spoonmap.py
nse/: azure-sql-detect.nse  cisco-siet.nse  cucm-detect.nse  cups-browsed-rce.nse  dameware-detect.nse  delve-debugger.nse  gradio-detect.nse  ipmi-hashdump.nse  koboldcpp-detect.nse  kubelet-anon-check.nse  ldap-anon-enum.nse  ldap-channel-binding-check.nse  ldap-signing-check.nse  nodejs-inspector.nse  ollama-detect.nse  openai-api-detect.nse  wsus-detect.nse
tests/: test_nse_integration.py  test_spoonmap.py
